tests/rosetta/out/Haskell/associative-array-creation.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/associative-array-creation.hs:138:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/associative-array-creation.hs:133:1
                 /workspace/mochi/tests/rosetta/out/Haskell/associative-array-creation.hs:138:1
    |
138 | main = do
    | ^^^^
